# the-roots-of-lisp

./: .gitignore  LICENSE  README  README.markdown  README.md  the-roots-of-lisp.cabal
.github/workflows/: haskell-ci.yml
app/: Main.hs
lispbits/: stdlib.lisp
src/Language/Lisp/: Cli.hs  Interpreter.hs  Lexer.hs  Parser.hs  Repl.hs  Types.hs
src/Lisp/: Cli.hs  Eval.hs  Lexer.hs  Parser.hs  Repl.hs  Types.hs
test/: EvalSpec.hs  Main.hs  ParserSpec.hs
