cabal-version:      3.0
name:               the-roots-of-lisp
version:            0.1.0.0
synopsis:           Implementation of a minimal LISP interpreter
description:        Implementation of a minimal LISP interpreter based on Paul Graham's famous article The Roots of Lisp
License:            BSD-3-Clause
License-file:       LICENSE
homepage:           https://github.com/meritamen/the-roots-of-lisp
author:             Meritamen
maintainer:         meritamen@sdf.org
category:           Language
build-type:         Simple
extra-source-files: lisp/stdlib.lisp
tested-with:        GHC == 9.6.7, GHC == 9.8.4, GHC == 9.10.3, GHC == 9.12.4

common warnings
    ghc-options: -Wall -Wno-name-shadowing

library
    import:           warnings
    exposed-modules:  Lisp.Cli
                    , Lisp.Eval
                    , Lisp.Lexer
                    , Lisp.Parser
                    , Lisp.Repl
                    , Lisp.Types
    build-depends:    base >= 4.18.3.0 && <= 4.21.2.0
                    , containers  >= 0.6
                    , haskeline ^>= 0.8.2.1
                    , megaparsec < 9.7 && > 9.4
                    , mtl ^>= 2.3.1
                    , optparse-applicative ^>= 0.18.1.0
                    , text > 2.0
                    , text-show ^>= 3.11
    hs-source-dirs:   src
    default-language: Haskell2010
    default-extensions:
                      DeriveFunctor
                      GeneralizedNewtypeDeriving
                      ImportQualifiedPost
                      LambdaCase
                      OverloadedStrings
                      StrictData
                      TupleSections

executable lisp
    import:           warnings
    main-is:          Main.hs
    build-depends:
                      base >= 4.18.3.0 && <= 4.21.2.0
                    , the-roots-of-lisp

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite lisp-test
    import:           warnings
    default-language: Haskell2010
    other-modules:    EvalSpec
                    , ParserSpec
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
                      base >= 4.18.3.0 && <= 4.21.2.0
                    , hspec ^>= 2.11.17
                    , the-roots-of-lisp
                    , tasty ^>= 1.5.4
                    , tasty-hspec ^>= 1.2.0
                    , text >= 2.0
    default-extensions: OverloadedStrings
